fix: tableau centers on mobile, add captions

--- a/css/styles.css
+++ b/css/styles.css
@@ -10796,3 +10796,27 @@ header.masthead .post-heading .meta a {
     font-size: 2.25rem;
   }
 }
+
+
+
+#tableau-viz {
+  margin: 0 auto;
+  /* margin-bottom: 10px; */
+  overflow-x: hidden;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 420px;
+}
+/* @media (min-width: 768px) {
+  #tableau-viz {
+    max-width: 90%;
+  }
+} */
+/* @media (min-width: 1200px) {
+  #tableau-viz {
+    max-width: 80%;
+  }
+} */
